--- a/src/App.css
+++ b/src/App.css
@@ -357,8 +357,8 @@ h2 {
 }
 
 .about--section--img>img {
-    width: 100%;
-    height: 100%;
+    width: 150%;
+    height: 150%;
 }
 
 /* About Us Ends */
@@ -847,6 +847,10 @@ input[type="checkbox"] {
     .nav__hamburger.active :nth-child(3) {
         transform: rotate(-45deg) translate(0.45rem, -0.1875rem);
     }
+}
+
+a {
+    text-decoration: none;
 }
 
 /* Responsive Screens Ends*/
