--- a/src/App.css
+++ b/src/App.css
@@ -603,6 +603,7 @@ input[type="checkbox"] {
 
 .footer--items ul>li>a {
     text-decoration: none;
+    cursor: pointer;
 }
 
 .footer--social--icon>ul {
